moved introduction text up to avoid it form overlaping with button "découvrir"

--- a/quartiers-2/public/css/home_page.css
+++ b/quartiers-2/public/css/home_page.css
@@ -33,7 +33,7 @@
     color: #000000;
     padding: 1px;
     font-size: 25%;
-    bottom : max(14%, 6.2em);
+    bottom : max(15%, 6.2em);
     background-color: #FCF3ECB7;
 }
 
